--- a/Nodejs-learning/npmtest/index.html
+++ b/Nodejs-learning/npmtest/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1 class="text-center">Nodejs</h1>
-
+    <a href="http://juhui.party:8008">goto</a>
 
     <div class="btn btn-success" id="sendMsg">发送</div>
 
