--- a/frontend-learning/Polymer-web-component/index.html
+++ b/frontend-learning/Polymer-web-component/index.html
@@ -8,9 +8,9 @@
 
 <body>
     <dl class="">
-        <dt><h1><a href="#">关于 offsetParent</a></h1></dt>
+        <dt><h1><a href="/offsetParent.html">关于 offsetParent</a></h1></dt>
         <dd></dd>
-        <dt><h1><a href="#">关于 z-index</a></h1></dt>
+        <dt><h1><a href="/order-idex.html">关于 z-index</a></h1></dt>
         <dd></dd>
     </dl>
 </body>
