--- a/frontend-learning/Polymer-web-component/index.html
+++ b/frontend-learning/Polymer-web-component/index.html
@@ -12,6 +12,8 @@
         <dd></dd>
         <dt><h1><a href="/order-idex.html">关于 z-index</a></h1></dt>
         <dd></dd>
+        <dt><h1><a href="/this.js">关于js中的this（请运行this.js）</a></h1></dt>
+        <dd></dd>
     </dl>
 </body>
 
