--- a/frontend-learning/Polymer-web-component/order-idex.html
+++ b/frontend-learning/Polymer-web-component/order-idex.html
@@ -15,8 +15,7 @@
 
 
         div[class^="example"], div[class^="content"] {
-            margin-top: 30px;
-            margin-left: 50px;
+            margin: 30px 50px;
             padding: 20px;
             border: 2px dashed #ddd;
             display: block;
