--- a/Frontend-learning/Emmet/test.html
+++ b/Frontend-learning/Emmet/test.html
@@ -4,6 +4,10 @@
   <title>Emmet测试</title>
 </head>
 <body>
+  <div id="container"></div>
+  <div class="b">
+    <div class="b b_m"></div>
+  </div>
 
 </body>
 </html>
