颜色和背景

--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -4,22 +4,59 @@
     <meta charset="utf-8">
     <title></title>
     <style media="screen">
-      div{
+    body{
+      padding: 300px;
+    }
+      .div1{
+        width: 300px;
+        height: 200px;
+        float: right;
+        background: red;
+        margin-bottom: 10px;
+      }
+      .div2{
+        width: 100px;
+        height: 200px;
+        background: yellow;
+        margin-top: 10px;
+        float: left;
+      }
+      .div3{
+
+        /*display: inline-block;*/
+        height: 40px;
+        background: green;
+        width: 100px;
+        background: #ffc;
+        float: left;
+
+      }
+      .parent{
+        width: 100px;
+        height: 100px;
+        background: #ccc;
+      }
+      .child{
+        /*width: 60px;*/
+        height: 60px;
+        /*margin: 5%;*/
+        background: red;
       }
       .neg{
         margin-bottom: 30px;
       }
+      p{
+        float: left;
+      }
     </style>
   </head>
   <body>
-    <div class="parent">
-      <p class="neg">Lorem ipsum dolor sit amet, <span>Lorem ipsum</span><span> dolor sit amet, consectetur adipisicing elit. Et iusto soluta aliquid nesciunt, mollitia suscipit atque sed voluptas assumenda, dolores. Impedit laboriosam, aperiam soluta eaque quo magni, pariatur libero dicta, laudantium veniam voluptates iusto voluptatem aspernatur maxime quibusdam animi iste sit sed consequuntur dolore nesciunt. Obcaecati molestias, expedita ab, repellendus ex, fugiat ad placeat cupiditate fugit cumque illum repudiandae ratione odio totam. Delectus molestias ipsum labore in, voluptate qui quos aspernatur quas? Totam velit esse sed hic similique neque minus architecto adipisci, illum nisi dolores dolore modi, distinctio assumenda itaque porro optio dolorum reprehenderit, laborum quo, fugit cumque. Dicta molestias alias magnam error omnis cumque voluptate officiis accusamus, eaque reiciendis illum consectetur quidem dolore aliquid, molestiae recusandae distinctio. Nisi ab accusamus, rem amet atque ratione! Unde voluptatum ipsam, harum doloremque quae exercitationem aspernatur ab nihil in non, totam quam porro iusto eveniet deleniti cum, velit, nam sapiente sit. Est magnam assumenda, unde. Perspiciatis iure quia aspernatur molestiae saepe, deserunt id omnis, voluptas aperiam inventore odit, asperiores fugiat aliquid? Porro nulla ullam, illum consequuntur accusamus est consectetur optio quibusdam aliquam quo, eum error. Numquam impedit nesciunt distinctio cupiditate quaerat sunt accusamus assumenda ullam dolorum facilis! Error qui nobis ab repellendus voluptate, similique libero eos pariatur provident inventore eum quasi perferendis quae iste illo est molestiae iure repudiandae quaerat laboriosam aliquid culpa. Dolor amet eligendi nihil sapiente in eaque quasi aspernatur natus alias! Ratione totam dolorem consectetur, nostrum voluptatum commodi obcaecati dolores, velit aperiam, eaque quam adipisci pariatur hic voluptatem repellendus omnis! Odio laborum nulla quidem numquam corporis. Molestiae id, sequi perferendis quam aspernatur nihil quisquam ad dolores ex ducimus iusto consequuntur, culpa illo ullam, amet sit natus officia mollitia voluptatem architecto, nisi. Magnam ipsa perferendis, voluptatibus earum quod explicabo vitae ipsum libero, tempora! Reiciendis quia, doloribus saepe similique non, iste quae.</span> consectetur adipisicing elit. Cumque fugit pariatur quam nobis deserunt, facere perspiciatis quidem debitis nisi ab aspernatur adipisci ex tempore, repudiandae, animi obcaecati! Earum, adipisci, fugit.</p>
-      奥斯卡两地分居奥斯卡理发师开了房间啊
-    </div>
-      <a href="http://www.baidu.com" style="display:block;">zhang <p>askldfjaskldfksldfjk</p></a>
-      <span>zhangjianjun</span>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, voluptates!</p>
 
-    <p></p>
-  </body>
+    <div class="div1">
+      <div class="div2"></div>
+      <div class="div3"></div>
+    </div>
+    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+
+        </body>
 </html>
