--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -4,57 +4,37 @@
     <meta charset="utf-8">
     <title></title>
     <style media="screen">
-    body{
-      padding: 300px;
-    }
-      .div1{
-        width: 300px;
+      /*.div1{
+        width: 200px;
         height: 200px;
-        float: right;
-        background: red;
-        margin-bottom: 10px;
+        background: #000;
       }
       .div2{
         width: 100px;
+        height: 100px;
+        background: #cfb;
+        position: relative;
+      }*/
+
+      body{
+        padding: 300px;
+      }
+      .div1{
+        width: 200px;
         height: 200px;
-        background: yellow;
-        margin-top: 10px;
-        float: left;
+        background: #000;
       }
-      .div3{
-
-        /*display: inline-block;*/
-        height: 40px;
-        background: green;
-        width: 100px;
-        background: #ffc;
-        float: left;
-
-      }
-      .parent{
+      .div2{
         width: 100px;
         height: 100px;
-        background: #ccc;
-      }
-      .child{
-        /*width: 60px;*/
-        height: 60px;
-        /*margin: 5%;*/
-        background: red;
-      }
-      .neg{
-        margin-bottom: 30px;
-      }
-      p{
-        float: left;
+        background: #cfb;
+        position: relative;
       }
     </style>
   </head>
   <body>
-    <div class="parent">
-      <p class="neg">Lorem ipsum dolor sit amet, <span>Lorem ipsum</span> dolor sit amet, consectetur adipisicing elit. Et iusto soluta aliquid nesciunt, mollitia suscipit atque sed voluptas assumenda, dolores. Impedit laboriosam, aperiam soluta eaque quo magni, pariatur libero dicta, laudantium veniam voluptates iusto voluptatem aspernatur maxime quibusdam animi iste sit sed consequuntur dolore nesciunt. Obcaecati molestias, expedita ab, repellendus ex, fugiat ad placeat cupiditate fugit cumque illum repudiandae ratione
+    <div class="div1">
+      <div class="div2"></div>
     </div>
-    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-
-        </body>
+  </body>
 </html>
