--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -1,40 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <style media="screen">
-      /*.div1{
-        width: 200px;
-        height: 200px;
-        background: #000;
-      }
-      .div2{
-        width: 100px;
-        height: 100px;
-        background: #cfb;
-        position: relative;
-      }*/
 
-      body{
-        padding: 300px;
-      }
-      .div1{
-        width: 200px;
-        height: 200px;
-        background: #000;
-      }
-      .div2{
-        width: 100px;
-        height: 100px;
-        background: #cfb;
-        position: relative;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="div1">
-      <div class="div2"></div>
-    </div>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <style media="screen">
+    body{
+      width: 60px;
+    }
+    IMG {
+      width: 60px;
+      height: 60px;
+    }
+    [title*="ab"]{
+      width: 100px;
+      font-weight: bold;
+      font-size: 123px;
+    }
+  </style>
+</head>
+
+<body>
+  <img id="x1" title="zhangJianjun   abs" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
+  <img id="x" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
+  <img id="x" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
+</body>
+
 </html>
