--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <style media="screen">
 
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <style media="screen">
     body{
-      width: 60px;
-    }
-    IMG {
-      width: 60px;
-      height: 60px;
-    }
-    [title*="ab"]{
+      /*background: black;*/
       width: 100px;
-      font-weight: bold;
-      font-size: 123px;
+      height: 100px;
     }
-  </style>
-</head>
+    .div1{
+      border-left: 10px solid transparent;
+      border-top: 10px solid green;
+      border-right: 10px solid transparent;
+      width: 0;
+    }
+    </style>
+  </head>
 
-<body>
-  <img id="x1" title="zhangJianjun   abs" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
-  <img id="x" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
-  <img id="x" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
-</body>
-
+  <body>
+    <div class="div1"></div>
+    <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, consequatur.</b>
+  </body>
 </html>
