--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -1,71 +1,33 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
   <head>
     <meta charset="utf-8">
     <title></title>
     <style media="screen">
-      .parent > div{
+      .div1{
+        width: 100px;
+        background: #f00;
+      }
+      .div2{
+        width: 50%;
+        height: 50px;
+        background: yellow;
+        margin-bottom: 100%;
+      }
+      .div3{
+        width: 100px;
         height: 100px;
-        margin-bottom: 10px;
-        background: red;
-      }
-      .div1 + .div2:hover{
-        background: blue;
-
-      }
-      .b:hover{
-        font-size: 20px;
-      }
-      a::first-line{
-        color: yellow;
-      }
-      span::first-line{
-        background: blue;
-      }
-      span::after{
-        content: "the end"
+        background: green;
       }
     </style>
   </head>
   <body>
-    <div class="parent">
-      <div class="div1"></div>
+
+    <div class="div1">
       <div class="div2"></div>
-      <div class="div3"></div>
-      <div class="div4"></div>
-      <span>Lorem ssimus quo voluptates asperioresm? Dolores.</span>
-      <a href="1">zhang001</a>
-      <a href="1" class="b">zhang002</a>
-      <a href="1">zhang003</a>
     </div>
+
+    <div class="div3"></div>
+
   </body>
-=======
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <style media="screen">
-    body{
-      width: 60px;
-    }
-    IMG {
-      width: 60px;
-      height: 60px;
-    }
-    [title*="ab"]{
-      width: 100px;
-      font-weight: bold;
-      font-size: 123px;
-    }
-  </style>
-</head>
-
-<body>
-  <img id="x1" title="zhangJianjun   abs" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
-  <img id="x" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
-  <img id="x" src="http://t12.baidu.com/it/u=3117210431,262031559&fm=76" alt="">
-</body>
-
->>>>>>> b6397676839c692bac62573fdb02fc20b1a47ccf
 </html>
