--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-
+      <div>Lorem <img src="http://avatar.csdn.net/5/4/A/1_unearth.jpg" alt="">ipsum dolor sit amet, consectetur adipisicing elit. Numquam, ex?</div>
   </body>
 </html>
