--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -1,96 +1,34 @@
-<!DOCTYPE html>
 <html>
-<<<<<<< HEAD
+
 
 <head>
   <meta charset="utf-8">
   <title></title>
   <style media="screen">
-    .div1 {
-      /* height: 100px; */
-      /* width: 100px; */
-      /* background: red; */
-      /* position: relative; */
-      width: 100px;
-      height: 100px;
-      border: 1px solid red;
-      opacity: 0;
-      transition: opacity .35s, transform .35s;
-      transform: scale(0, 1);
-    }
+  .demo {
+    perspective: 1px; padding: 0; height: 600px; height: calc(100vh - 300px); overflow: auto;
+}
+.box {
+    height: 1280px;
+    transform-style: preserve-3d;
+    position: relative;
+}
+.iphone {
+    position: absolute; left: 50%;
+    transform: translate3D(-50%, -120px, -1px) scale(2);
+}
 
-    .div1:hover {
-      opacity: 1;
-      transform: scale(1);
-    }
-
-    .div2 {
-      height: 50px;
-      width: 50px;
-      background: green;
-      position: absolute;
-      padding: 10px;
-      top: 0;
-      bottom: 0;
-      margin: auto 0;
-    }
-
-    .div2::before {
-      content: "";
-      position: absolute;
-      width: 100px;
-      height: 2px;
-      background: red;
-    }
-
-    .div3 {
-      height: 300px;
-      width: 100px;
-    }
-
-    .box {
-      border: solid 1px #000;
-      box-sizing: content-box;
-      margin: 100px auto;
-      width: 1000px;
-      height: 300px;
-      /* 重点看这里 */
-      perspective: 800px;
-    }
-
-    .child {
-      box-sizing: content-box;
-      width: 300px;
-      height: 300px;
-      float: left;
-      margin-left: 5px;
-      background-color: #87D30A;
-      /* 重点看这里 */
-      transform: rotateY(95deg);
-    }
   </style>
 </head>
 
 <body>
-
-  <div class="div1"></div>
-  <div class="div2"></div>
-  <div class="box">
-    <div class="child"></div>
-    <div class="child"></div>
-    <div class="child"></div>
-    <div style="clear:both;"></div>
-  </div>
-</body>
-
-</html>
-=======
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-      <div>Lorem <img src="http://avatar.csdn.net/5/4/A/1_unearth.jpg" alt="">ipsum dolor sit amet, consectetur adipisicing elit. Numquam, ex?</div>
+  <div class="demo">
+    <div class="box">
+        <img src="http://files.jb51.net/file_images/article/201403/201403191014215.png" class="iphone">
+        <div style="padding-top: 800px;">
+        <i class="smile">asdfasdfa</i><i class="flower">asfdasdf</i><i class="music">asdfasdf</i><i class="pdf">asdfa</i>
+        </div>
+    </div>
+</div>
   </body>
 </html>
->>>>>>> b25b8b0432fc17dd1dadfcb011ccd85eea1f65a0
