--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -1,34 +1,24 @@
-<html>
-
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <style media="screen">
-  .demo {
-    perspective: 1px; padding: 0; height: 600px; height: calc(100vh - 300px); overflow: auto;
-}
-.box {
-    height: 1280px;
-    transform-style: preserve-3d;
-    position: relative;
-}
-.iphone {
-    position: absolute; left: 50%;
-    transform: translate3D(-50%, -120px, -1px) scale(2);
-}
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    p.neg{
+      margin-bottom: -50px;
+      margin-right: 10px;
+      margin-left: 10px;
+      margin-top: 0;
+      border: 3px solid gray; 
+    }
   </style>
 </head>
-
 <body>
-  <div class="demo">
-    <div class="box">
-        <img src="http://files.jb51.net/file_images/article/201403/201403191014215.png" class="iphone">
-        <div style="padding-top: 800px;">
-        <i class="smile">asdfasdfa</i><i class="flower">asfdasdf</i><i class="music">asdfasdf</i><i class="pdf">asdfa</i>
-        </div>
-    </div>
-</div>
-  </body>
+  <div style="width: 420px; margin-top:50px; background:silver; ">
+<p class="neg">negnegnegnegnegnegneg</p>
+  </div>
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, repudiandae.</p>
+</body>
 </html>
