--- a/CSS-learning/CSS权威指南/test.html
+++ b/CSS-learning/CSS权威指南/test.html
@@ -5,20 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    p.neg{
-      margin-bottom: -50px;
-      margin-right: 10px;
-      margin-left: 10px;
-      margin-top: 0;
-      border: 3px solid gray; 
-    }
-  </style>
 </head>
 <body>
-  <div style="width: 420px; margin-top:50px; background:silver; ">
-<p class="neg">negnegnegnegnegnegneg</p>
-  </div>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, repudiandae.</p>
+  <table>
+    <!-- <tr> -->
+      <!-- <td> -->
+        <div>
+        <img style="height: 400px;" src="https://ss1.bdstatic.com/5eN1bjq8AAUYm2zgoY3K/r/www/cache/yunying/2017-xmas-logo/sprite.png" alt="">
+        </div>
+        <!-- </td> -->
+    <!-- </tr> -->
+  </table>
 </body>
 </html>
