--- a/Javascript-learning/JavaScript高级程序设计/test.html
+++ b/Javascript-learning/JavaScript高级程序设计/test.html
@@ -1,6 +1,17 @@
-<ul>
-  <li>item 1</li>
-  <li>item 2</li>
-  <li>item 3</li>
-  <li>item 4</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title>document.write</title>
+</head>
+
+<body>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, doloremque.</p>
+  <script>
+    window.onload = function () {
+      document.write('Hello world!');
+    }
+  </script>
+</body>
+
+</html>
