--- a/Javascript-learning/JavaScript高级程序设计/test.html
+++ b/Javascript-learning/JavaScript高级程序设计/test.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>document.write</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
-
 <body>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, doloremque.</p>
-  <script>
-    window.onload = function () {
-      document.write('Hello world!');
-    }
-  </script>
-</body>
 
+<ul>
+    <li>item 1</li>
+    <li>item 2</li>
+    <li>item 3</li>
+    <li>item 4</li>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, ipsum?
+  </ul>
+</body>
 </html>
