--- a/Javascript-learning/JavaScript高级程序设计/test.html
+++ b/Javascript-learning/JavaScript高级程序设计/test.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    .center {
+      text-align: center;
+    }
+
+    .fr {
+      float: right;
+    }
+
+    .fl {
+      float: left;
+    }
+  </style>
 </head>
+
 <body>
 
-<ul>
-    <li>item 1</li>
-    <li>item 2</li>
-    <li>item 3</li>
-    <li>item 4</li>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, ipsum?
-  </ul>
+  <div class="center">
+    <span>Lorem ipsum dolor .</span>
+    <span class="fr">Vel cul.</span>
+    <span class="fr">Soluta .</span>
+  </div>
 </body>
+
 </html>
