--- a/CSS-learning/test.html
+++ b/CSS-learning/test.html
@@ -7,34 +7,40 @@
     <title>Document</title>
     <style>
       main {
-        margin-top: 200px;
+        width: 500px;
+        height: 500px;
+        border: 1px solid #ccc;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
-        outline: 4px solid #eee;
-        width: 400px;
-        height: 200px;
-        perspective: 900px;
-        transform: rotateY(45deg);
-        /* transform: perspective(200px) rotateY(30deg); */
+        position: relative;
       }
-      div {
-        width: 200px;
+
+      .div1 {
+        width: 300px;
         height: 200px;
-        /* transform: rotateY(30deg); */
+        background: lightblue;
+        /* top: 50%;
+        left: 50%; */
+        position: relative;
         position: absolute;
-        background-color: red;
       }
-      div:nth-child(2) {
-        background-color: blue;
-        transform: translateZ(300px);
+
+      .div2 {
+        width: 300px;
+        height: 200px;
+        background: green;
+        /* top: 50%;
+        left: 50%; */
+        position: relative;
+        position: absolute;
       }
     </style>
   </head>
   <body>
     <main>
-      <div></div>
-      <div></div>
+      <div class="div1"></div>
+      <div class="div2"></div>
     </main>
   </body>
 </html>
