--- a/CSS-learning/特效/文字人物肖像.html
+++ b/CSS-learning/特效/文字人物肖像.html
@@ -35,6 +35,7 @@
   </head>
   <body>
     <div id="container">
+      以下文字仅作为填充背景 <br />
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, blanditiis
       quo, veritatis ratione omnis rem tenetur distinctio, necessitatibus error
       molestiae quam quos. Eligendi odit saepe ipsum, harum aperiam, ea
