--- a/CSS-learning/特效/文字人物肖像.html
+++ b/CSS-learning/特效/文字人物肖像.html
@@ -16,8 +16,8 @@
         /* 在 -webkit-background-clip: text 下，多叠加几张背景图人物显影效果更好 */
         background: url(https://thispersondoesnotexist.com/image) center center
             no-repeat,
-          url(https://thispersondoesnotexist.com/image) center center no-repeat,
           url(https://thispersondoesnotexist.com/image) center center no-repeat;
+        background-blend-mode: color-dodge;
         background-size: contain;
         overflow: hidden;
         font-size: 10px;
