--- a/CSS-learning/特效/文字人物肖像.html
+++ b/CSS-learning/特效/文字人物肖像.html
@@ -23,6 +23,7 @@
         font-size: 10px;
 
         /* 参考视频： https://www.bilibili.com/video/BV1Ea411k7Mo */
+        /* 在线预览： https://codepen.io/Cinux-Chosan/pen/VwXPjdY */
 
         /* 主要依靠 color 和 -webkit-background-clip 这两个属性：先将文字颜色设置为透明，然后将背景色设置为文字的颜色，从而达到用文字显示图片人物的效果 */
 
